# Fiat500-Unit

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
assets/Afinity projects/: Default Cover Image.af
src/: MainWindow.cpp  MainWindow.hpp  Ref.hpp  Scope.hpp  main.cpp
src/dbus/: Object.cpp  Object.hpp  Types.cpp  Types.hpp
src/dbus/bluez/: Adapter.cpp  Adapter.hpp  BluetoothManager.cpp  BluetoothManager.hpp  Device.cpp  Device.hpp  Manager.cpp  Manager.hpp  Manager.tpp  MediaControl.cpp  MediaControl.hpp  MediaPlayer.cpp  MediaPlayer.hpp  Object.cpp  Object.hpp  Types.hpp
src/menu/: Entry.cpp  Entry.hpp  Item.cpp  Item.hpp  Menu.cpp  Menu.hpp  Page.cpp  Page.hpp
src/menu/widgets/: Breadcrumbs.cpp  Breadcrumbs.hpp  Navigator.cpp  Navigator.hpp
src/pages/: MusicPage.cpp  MusicPage.hpp  SettingsPage.cpp  SettingsPage.hpp
src/pages/debugPanel/: AdapterPanel.cpp  DebugPanel.cpp  DebugPanel.hpp  DevicePanel.cpp  MediaPanel.cpp  MediaPanel.hpp
src/settings/: Setting.hpp
src/widgets/: AdapterPanel.cpp  AdapterPanel.hpp  DebugPanel.hpp  DevicePanel.cpp  DevicePanel.hpp  LogPanel.cpp  LogPanel.hpp  MediaPanel.cpp  MediaPanel.hpp  SideBar.cpp  SideBar.hpp  sizes.hpp
